# ChameleonVoice

./: .gitignore  xtts_server.py
rust_agent/: Cargo.toml
rust_agent/assets/: index.html  script.js  style.css
rust_agent/src/: config.rs  main.rs  multi_threads.rs  popup.rs  state.rs
