[package]
name = "rust_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
futures-util = "0.3"
actix-cors = "0.7"
tokio-stream = "0.1"
whisper-rs = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1.16"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
anyhow = "1"
url = "2"
urlencoding = "2"
unicode-normalization = "0.1"
byteorder = "1"
dotenvy = "0.15"
whisper-rs-sys = "=0.9.0"